# 20260622jpmc

./: .version.txt  apod.py  apod_downloads.py  carddeck.py  count_ext.py  jokerdeck.py  playingcard.py  simple_classes.py
ANSWERS/: airport_codes_api.py  apod.py  apod_downloads.py  count_ext.py  cpresidents.py  doubledeco.py  fauxrange.py  flask_powers_of_two.py  flask_powers_of_two_bs.py  flask_powers_of_two_rest.py  folder_scanner.py  jpresidents.py  make_zip.py  maxlist.py  noaa_metadata.py  noaa_precip.py  normalstringdict.py  pickle_potus.py  pres_attr.py  pres_gen.py  pres_monkey.py  pres_monkey_amb.py  pres_upper_gen.py  president_main.py  (+16 more)
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/: pyproject.toml
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/docs/source/: conf.py  index.rst
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/src/{{cookiecutter.app_slug}}/: __init__.py  auth.py  db.py  schema.sql  {{cookiecutter.app_slug}}.py
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/src/{{cookiecutter.app_slug}}/templates/: base.html
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/src/{{cookiecutter.app_slug}}/templates/auth/: login.html  register.html
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/src/{{cookiecutter.app_slug}}/templates/{{cookiecutter.app_module}}/: home.html  other.html
SETUP/cookiecutter-flask-simple/{{cookiecutter.app_slug}}_project/tests/: conftest.py  test_auth.py  test_db.py  test_factory.py  test_{{cookiecutter.app_slug}}.py
(+184 files in other folders)
