[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# the above is required

[project]
name = "{{cookiecutter.app_slug}}"
version = "1.0.0"
authors = [
    { name="{{cookiecutter.author_name}}", email="{{cookiecutter.author_email}}" },
]
description = "{{cookiecutter.app_description}}"
readme = "README.rst"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
   'Flask >= 3.0',
   'Werkzeug >= 3.0',
   'click >= 8.0',
]

{% if cookiecutter.author_url != "Author URL" %}
[project.urls]
"Homepage" = "{{cookiecutter.author_url}}"
{% endif %}
